SurrealDb.Net.Tests/Snapshots/v3/RawQueryTests.ShouldHaveOneProtocolErrorResult.verified.txt
Parse error: Unexpected token `an identifier`, expected Eof
 --> [1:5]
  |
1 | abc def;
  |     ^^^
